<resources>
    <string name="app_name">Effective Mobile</string>
    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="cart">Корзина</string>
    <string name="discount">Акции</string>
    <string name="profile">Профиль</string>
    <string name="register">Вход</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone">Номер телефона</string>
    <string name="login">Войти</string>
    <string name="register_warning">Нажимая кнопку “Войти”, Вы принимаете\n<u>условия программы лояльности</u></string>
    <string name="personal_account">Личный кабинет</string>
    <string name="logout">Выйти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide">Скрыть</string>
    <string name="more_detail">Подробнее</string>
    <string name="descriptioin">Описание</string>
    <string name="characteristics">Характеристики</string>
</resources>